Perma bustage on builds/worker/workspace/build/src/layout/base/nsCSSFrameConstructor.cpp when Gecko 71 merges to Beta on 2019-10-14
Categories
(Core :: Layout, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | --- | verified |
People
(Reporter: dluca, Assigned: dholbert)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
[Tracking Requested - why for this release]:
Failure log:
https://treeherder.mozilla.org/logviewer.html#?job_id=268544655&repo=try
![]() |
Reporter | |
Updated•6 years ago
|
![]() |
||
Comment 1•6 years ago
|
||
[task 2019-09-26T11:34:40.788Z] 11:34:40 ERROR - /builds/worker/workspace/build/src/layout/base/nsCSSFrameConstructor.cpp:5706:15: error: unused variable 'disp' [-Werror,-Wunused-variable]
[task 2019-09-26T11:34:40.788Z] 11:34:40 INFO - const auto* disp = computedStyle->StyleDisplay();
Assignee | ||
Comment 2•6 years ago
|
||
Thanks for the heads-up.
I've got a trivial patch (with mozilla::Unused). Just testing locally and then I'll post.
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 3•6 years ago
|
||
The patch is at https://phabricator.services.mozilla.com/D47319 , though it's stuck in a draft state right now (which is why it hasn't appeared on the bug yet), due to some temporary phabricator issues.
Assignee | ||
Comment 4•6 years ago
|
||
![]() |
||
Comment 6•6 years ago
|
||
bugherder |
![]() |
||
Updated•6 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Description
•