Bug 1584187: Pass an assertion-only variable to mozilla::Unused, to fix non-nightly opt build error. r=mats

Differential Revision: https://phabricator.services.mozilla.com/D47319